# GRIFFIN

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
griffin/: __init__.py
griffin/ace/: __init__.py  ace_message.py  aspirational.py  handlers.py  prompts.py  stack.py
griffin/ace/core/: ace_message.py
griffin/cli/: __init__.py  main.py
griffin/core/: __init__.py  atoms.py  version.py
griffin/domain/: __init__.py  models.py
griffin/infra/: __init__.py  config.py  http_client.py  llm_dummy.py  ports.py
griffin/infra/config/: app_config.py
griffin/infra/llm/: llm_port.py  simpleaichat_impl.py
griffin/services/: __init__.py  esi_characters.py  use_cases.py
tests/: test_cli_integration.py  test_esi_characters_service.py  test_imports.py
tools/: check_llm_runtime.py  llm_check.py  run_ace.py
